# ecobot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  README_DOCKER.md  Secrets.example.toml  server-setup.sh
.github/workflows/: deploy.yml  rust.yml  test.yml
client/: Cargo.toml
client/src/: main.rs
lib/src/: schema.proto
server/: Cargo.toml
server/src/: handlers.rs  main.rs  route.rs  routes.json
server/src/contents/: dangerous.md  give_away.md  metal.md  organic.md  other.md  paper.md  plastic.md  start.md
src/: db.rs  handlers.rs  lib.rs  main.rs  route.rs  routes.json  users.rs
src/commands/: advent.rs  broadcast.rs  common.rs  content.rs  location.rs  mod.rs  stop.rs  subscription.rs
src/contents/: advent.md  animal.md  anons.md  anons1.md  anons_ecodvor.md  art.md  autumnecodvor25.md  books.md  clothes.md  dangerous.md  faq.md  find.md  food.md  garbage.md  give_away.md  glass.md  green_city  green_city.md  kolyovska.md  letter.md  metal.md  organic.md  other.md  paper.md  pines.md  plastic.md  recycling.md  setkibot_update.md  start.md  subscribe_advent.md  subscribe_main.md  subscriptions.md  subscriptions_advent.md  subscriptions_main.md  summerecodvor25.md  unsubscribe_advent.md  unsubscribe_main.md
src/db/: bin_location.rs  mod.rs  user.rs
