[package]
name = "ecobot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
tokio = { version = "1.26.0", features = ["full"] }
teloxide = { version = "0.12.2", features = ["macros"] }
serde = "1.0.152"
serde_json = "1.0.91"
log = "0.4.17"
once_cell = "1.20.2"
dotenv = "0.15.0"
rust-embed = "8.5.0"
reqwest = { version = "0.11.27", features = ["json"] }
surrealdb = "2.1.4"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.35", features = ["serde"] }
env_logger = "0.10.0"
